--- a/index.html
+++ b/index.html
@@ -1,45 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
-    <script src="qrcode.js" type="text/javascript"></script>
-    <script src="jquery.min.js" type="text/javascript"></script>
-    <title>GIS Attendance Form</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>QR Code Attendance System</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>QR Code Generator & Scanner</h1>
 
-    <div id="container">
-    <!-- QR Generator -->
-        <div class="box">
-            <h2>Generate QR Code</h2>
-            <input id="name" type="text" placeholder="Name of Student" style="width: 100%;" />
-            <input id="lrn" type="text" placeholder="LRN" style="width: 100%;" />
-            <div id="qrcode" style="margin-top:10px;"></div>
-            <button id="generateBtn">Generate</button>
-        </div>
+<h1>QR Code Attendance System</h1>
 
-        <!-- QR Scanner -->
-        <div class="box">
-            <h2>Scan QR Code</h2>
-            <label>Camera: <select id="cameraSelect"></select></label><br>
-            <button id="startBtn">Start Camera</button>
-            <button id="stopBtn" disabled>Stop</button>
-            <div style="margin-top: 8px;">
-            <video id="video" autoplay muted playsinline></video>
-            <canvas id="canvas" style="display:none;"></canvas>
-            </div>
-            <div style="margin-top: 8px;">
-            <input id="fileInput" type="file" accept="image/*">
-            </div>
-            <div id="lrnResult">LRN: </div>
-            <div id="nameResult">Name: </div>
-        </div>
+<div id="container">
+  <!-- QR Generator -->
+  <div class="box">
+    <h2>Generate QR Code</h2>
+    <input id="text" type="text" placeholder="Enter student data (LRN=123&Name=Juan)" />
+    <div id="qrcode" style="margin-top:10px;"></div>
+    <button id="generateBtn">Generate</button>
+  </div>
+
+  <!-- QR Scanner -->
+  <div class="box">
+    <h2>Scan QR Code</h2>
+    <label>Camera: <select id="cameraSelect"></select></label><br>
+    <button id="startBtn">Start Camera</button>
+    <button id="stopBtn" disabled>Stop</button>
+    <div>
+      <video id="video" autoplay muted playsinline></video>
+      <canvas id="canvas" style="display:none;"></canvas>
     </div>
-    <script src="script.js" type="text/javascript"></script>
-    <script src="jsQR.js" type="text/javascript"></script>
+    <div>
+      <input id="fileInput" type="file" accept="image/*">
+    </div>
+    <div id="result">No QR scanned yet</div>
+  </div>
+</div>
+
+<!-- Attendance List -->
+<div class="box" style="margin-top: 20px; width: 100%;">
+  <h2>Attendance List</h2>
+  <table id="attendanceTable">
+    <thead>
+      <tr>
+        <th>LRN</th>
+        <th>Name</th>
+        <th>Time</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
+
+<script src="qrcode.js"></script>
+<script src="jsQR.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
