Updated file pathing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>QR Code Attendance System</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" href="logo.png" type="image/x-icon">
 </head>
 <body>
 
@@ -57,9 +58,9 @@
   </table>
 </div>
 
-<script src="qrcode.js"></script>
-<script src="jsQR.js"></script>
-<script src="script.js"></script>
-<script src="xlsx.full.min.js"></script>
+<script src="js/qrcode.js"></script>
+<script src="js/jsQR.js"></script>
+<script src="js/script.js"></script>
+<script src="js/xlsx.full.min.js"></script>
 </body>
 </html>
